@startuml
title Domain Model - cloud-ecommerce-api (v0.1)
caption Autor: Marco Orlando Bustos Blas - Fecha: 2026-02-23

package "Domain Layer" {

    class Product {
        +UUID id
        +String sku
        +String name
        +String description
        +BigDecimal price
        +String imageUrl
        +Boolean active
    }

    class Category {
        +UUID id
        +String name
    }

    class Inventory {
        +UUID id
        +Integer quantity
        +Integer reservedQuantity
        +Boolean active
    }

    Category "1" o-- "*" Product : contains
    Product "1" o-- "1" Inventory : tracks-stock
}
@enduml